# fox_ie_wagtailstreamforms

./: pyproject.toml
.github/workflows/: nightly-tests.yml
docs/: conf.py
example/: models.py  settings.py  wagtailstreamforms_fields.py  wagtailstreamforms_hooks.py
example/migrations/: 0001_initial.py
fox_ie_wagtailstreamforms/: fields.py  forms.py  hooks.py  streamfield.py  urls.py  wagtail_hooks.py  wagtailstreamforms_fields.py  wagtailstreamforms_hooks.py
fox_ie_wagtailstreamforms/management/commands/: prunesubmissions.py
fox_ie_wagtailstreamforms/migrations/: 0001_initial.py  0002_form_site.py  0003_alter_form_fields.py
fox_ie_wagtailstreamforms/models/: __init__.py  abstract.py  form.py
fox_ie_wagtailstreamforms/templates/streamforms/: confirm_delete.html  index_submissions.html
fox_ie_wagtailstreamforms/templatetags/: streamforms_tags.py
fox_ie_wagtailstreamforms/utils/: loading.py  requests.py
fox_ie_wagtailstreamforms/views/: advanced_settings.py  copy.py  submission_delete.py  submission_list.py
tests/: settings.py  test_case.py  test_urls.py  test_utils.py
tests/blocks/: test_form_block.py  test_form_chooser_block.py  test_info_block.py
tests/fields/: test_base_field.py  test_fields.py  test_hook_select_field.py  test_registering.py  test_streamfield.py
tests/forms/: test_form_builder.py
tests/hooks/: test_process_form.py  test_registering.py  test_save_form_submission_data.py
tests/management/: test_prunesubmissions.py
tests/migrations/: 0001_initial.py
tests/models/: __init__.py  test_form.py  test_form_settings.py  test_form_submission.py  test_form_submission_file.py
tests/serializers/: test_form_submission.py
tests/templatetags/: test_form.py
tests/views/: test_admin_list.py  test_advanced.py  test_copy.py  test_delete.py  test_submission_list.py
