[tool.poetry]
name = "wagtailstreamforms"
version = "1.0.0"
description = "Wagtail forms in a streamfield"
authors = ["Lumunix <lumunix@icloud.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["wagtail", "streamfield", "forms","fox-ie"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = ">=5.2,<=6.0.1"
Unidecode = ">=0.04.14,<2.0"
wagtail-generic-chooser = ">=0.5.0,<0.7"

[tool.poetry.extras]
docs = [
    "sphinxcontrib-spelling>=2.3.0",
    "Sphinx>=1.5.2",
    "sphinx-autobuild>=0.6.0",
    "karma_sphinx_theme>=0.0.6",
]
test = [
    "mock==4.0.2",
    "pytest-django==4.7.0",
    "pytest==7.3.2",
    "isort[pyproject]==4.3.21",
    "flake8==3.7.9",
    "flake8-blind-except==0.1.1",
    "flake8-debugger==3.1.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.classifiers]
development-status = "5 - Production/Stable"
intended-audience = "Developers"
license = "OSI Approved :: MIT License"
operating-system = "OS Independent"
programming-language = ["Python :: 3", "Python :: 3.10", "Python :: 3.11", "Python :: 3.12"]
framework = ["Django", "Django :: 5.0", "Wagtail", "Wagtail :: 5", "Wagtail :: 6"]
topic = "Internet :: WWW/HTTP :: Site Management"


[tool.black]
line-length=99
target-version=["py310"]
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
  | migrations
)/
'''

